fix: import and export project template (#2617)
* fix: fix problems in import project template

* feat: refresh autofully

--- a/locales/zh.json
+++ b/locales/zh.json
@@ -189,7 +189,7 @@
     "add (recommended)": "新建（推荐）",
     "add application": "新建应用",
     "add member": "添加成员",
-    "add project": "添加项目",
+    "add project": "新建项目",
     "add {name}": "添加{name}",
     "added successfully": "添加成功",
     "addon": "扩展",
@@ -626,6 +626,7 @@
     "no more than {size} characters": "不超过{size}字符",
     "no need to execute": "无需执行",
     "no quota": "暂无配额",
+    "no results yet": "暂无结果",
     "no running runtime": "没有运行的Runtime",
     "no template": "暂无模板",
     "node": "节点",
@@ -745,7 +746,6 @@
     "project setting": "项目设置",
     "project template": "项目模板",
     "project-app-name-tip": "只能包含小写字母、数字和链接符号 -",
-    "project-name-tip": "只能包含小写字母、数字和链接符号 - _",
     "project/application/branch": "项目/应用/分支",
     "projects": "项目列表",
     "protected branch": "被保护分支",
@@ -763,7 +763,6 @@
     "recover template": "恢复模板",
     "reference API": "引用 API",
     "refresh": "刷新",
-    "refresh data": "刷新数据",
     "refuse": "拒绝",
     "regexp": "正则表达式",
     "region": "区域",
@@ -834,7 +833,7 @@
     "search by name": "按名称搜索",
     "search by nickname, username, email or mobile number": "通过昵称、用户名、邮箱或手机号搜索",
     "search by path or description": "按路径或描述搜索",
-    "search by project name": "通过项目名称搜索",
+    "search by project name": "搜索项目名",
     "search by user name": "通过用户名搜索",
     "search {name}": "搜索{name}",
     "select member label": "请选择成员标签",
@@ -985,6 +984,7 @@
     "view results": "查看结果",
     "view {name}": "查看{name}",
     "wait for {approver} to approve": "等待{approver}审批",
+    "waiting": "等待中",
     "warning": "警告",
     "week": "周",
     "weeks": "周",
@@ -1010,6 +1010,7 @@
     "{num} {type}": "{num}个{type}",
     "{size} items / page": "{size} 条 / 页",
     "{specific} instance": "{specific}实例",
+    "{success} apps imported successfully, {fail} apps imported failed": "{success} 个应用导入成功, {fail} 个应用导入失败",
     "{total} item added successfully": "成功添加{total}条",
     "{unreadCount} messages unread": "共有 {unreadCount} 封未读站内信",
     "{week}": "周{week}"
