--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1199,6 +1199,7 @@
     "deployment details": "deployment details",
     "deployment environment": "deployment environment",
     "deployment failed": "deployment failed",
+    "deployment information": "deployment information",
     "deployment mode": "deployment mode",
     "deployment records": "deployment records",
     "deployment request": "deployment request",
