--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1199,6 +1199,7 @@
     "deployment details": "部署详情页",
     "deployment environment": "部署环境",
     "deployment failed": "部署失败",
+    "deployment information": "部署信息",
     "deployment mode": "部署模式",
     "deployment records": "部署记录",
     "deployment request": "部署请求",
