--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1199,7 +1199,6 @@
     "deployment details": "deployment details",
     "deployment environment": "deployment environment",
     "deployment failed": "deployment failed",
-    "deployment information": "deployment information",
     "deployment mode": "deployment mode",
     "deployment records": "deployment records",
     "deployment request": "deployment request",
@@ -1259,6 +1258,7 @@
     "environment variables cannot be empty": "environment variables cannot be empty",
     "environmental domain name": "environmental domain name",
     "environments": "environments",
+    "environments config": "environments config",
     "equal to": "equal to",
     "equal to, not equal to": "Equal, Not equal",
     "example": "example",
