--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1199,7 +1199,6 @@
     "deployment details": "部署详情页",
     "deployment environment": "部署环境",
     "deployment failed": "部署失败",
-    "deployment information": "部署信息",
     "deployment mode": "部署模式",
     "deployment records": "部署记录",
     "deployment request": "部署请求",
@@ -1259,6 +1258,7 @@
     "environment variables cannot be empty": "环境变量不能为空",
     "environmental domain name": "环境域名",
     "environments": "环境",
+    "environments config": "环境配置",
     "equal to": "等于",
     "equal to, not equal to": "等于、不等于",
     "example": "示例",
