feat: add project deploy menu tabs (#2621)
* fix: fix project deploy menu tabs

* fix: fix i18n

* fix: fix form item

* fix: fix i18n

* fix: fix button style

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1259,6 +1259,7 @@
     "environment variables cannot be empty": "environment variables cannot be empty",
     "environmental domain name": "environmental domain name",
     "environments": "environments",
+    "environments config": "environments config",
     "equal to": "equal to",
     "equal to, not equal to": "Equal, Not equal",
     "example": "example",
