--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1259,6 +1259,7 @@
     "environment variables cannot be empty": "环境变量不能为空",
     "environmental domain name": "环境域名",
     "environments": "环境",
+    "environments config": "环境配置",
     "equal to": "等于",
     "equal to, not equal to": "等于、不等于",
     "example": "示例",
