fix: fix project deploy style

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -966,7 +966,7 @@
     "appMonitor": "appMonitor",
     "application / service / instance name": "application / service / instance name",
     "application branch rule": "application branch rule",
-    "application deployment information": "application deployment information",
+    "config information": "config information",
     "application description": "application description",
     "application information": "application information",
     "application name": "application name",
@@ -1151,7 +1151,7 @@
     "cores": "cores",
     "create and include the task": "create and include the task",
     "create and relate to the issue": "create and relate to the issue",
-    "create deployment request": "create deployment request",
+    "create deployment": "create deployment",
     "create document": "create document",
     "create folder": "create folder",
     "create issue": "create issue",
