--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -966,7 +966,7 @@
     "appMonitor": "应用监控",
     "application / service / instance name": "应用 / 服务 / 实例名",
     "application branch rule": "应用分支规则",
-    "application deployment information": "应用部署信息",
+    "config information": "配置信息",
     "application description": "应用描述",
     "application information": "应用信息",
     "application name": "应用名称",
@@ -1151,7 +1151,7 @@
     "cores": "核数",
     "create and include the task": "创建并包含任务",
     "create and relate to the issue": "创建并关联事项",
-    "create deployment request": "创建部署请求",
+    "create deployment": "创建部署",
     "create document": "创建文档",
     "create folder": "新建文件夹",
     "create issue": "新建事项",
