--- a/locales/zh.json
+++ b/locales/zh.json
@@ -829,7 +829,7 @@
     "search": "搜索",
     "search by Addon name or ID": "输入Addon名称或Id搜索",
     "search by keyword": "输入关键词搜索",
-    "search by keywords": "按关键字搜索",
+    "search by keywords": "搜索关键字",
     "search by name": "按名称搜索",
     "search by nickname, username, email or mobile number": "通过昵称、用户名、邮箱或手机号搜索",
     "search by path or description": "按路径或描述搜索",
@@ -840,6 +840,7 @@
     "select role": "选择角色",
     "select template": "选择模板",
     "select the existing": "选择已有",
+    "select {name}": "选择{name}",
     "selected template": "已选模板",
     "selected {name}": "已选择 {name}",
     "separated by comma, start with letters and can contain": "多个用,分隔，字母开头，可包含:数字 _ - . / $ # @ *， *只能放在末尾",
