--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1816,6 +1816,7 @@
     "support positive and negative integers, 0, and character strings": "support positive and negative integers, 0, and character strings",
     "support string and regular matching": "support string and regular matching",
     "supports integers and decimals": "supports integers and decimals",
+    "switch artifact": "switch artifact",
     "switch organization": "switch organization",
     "system": "system",
     "system log": "system log",
@@ -1856,7 +1857,6 @@
     "the maximum value must be greater than or equal to the minimum value": "the maximum value must be greater than or equal to the minimum value",
     "the memory size cannot be empty": "the memory size cannot be empty",
     "the minimum value must be less than or equal to the maximum value": "the minimum value must be less than or equal to the maximum value",
-    "the name of the deployment order is automatically echoed according to the product type, please select the artifact": "the name of the deployment order is automatically echoed according to the product type, please select the artifact",
     "the notification group will be permanently deleted": "the notification group will be permanently deleted",
     "the notification will be permanently deleted": "the notification will be permanently deleted",
     "the number of cpu cannot be empty": "the number of cpu cannot be empty",
