--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1816,6 +1816,7 @@
     "support positive and negative integers, 0, and character strings": "支持正负整数、0、字符串。",
     "support string and regular matching": "支持字符串和正则匹配。",
     "supports integers and decimals": "支持整数，小数。",
+    "switch artifact": "更换制品",
     "switch organization": "切换组织",
     "system": "系统",
     "system log": "系统日志",
@@ -1856,7 +1857,6 @@
     "the maximum value must be greater than or equal to the minimum value": "最大值必须大于等于最小值",
     "the memory size cannot be empty": "内存数不能为空",
     "the minimum value must be less than or equal to the maximum value": "最小值必须小于等于最大值",
-    "the name of the deployment order is automatically echoed according to the product type, please select the artifact": "部署单名称根据制品类型进行自动回显，请选择制品",
     "the notification group will be permanently deleted": "该通知组将永久删除",
     "the notification will be permanently deleted": "该通知将被永久删除",
     "the number of cpu cannot be empty": "cpu数不能为空",
