--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -991,6 +991,7 @@
     "are you sure to remove the relevant use cases from the current plan?": "are you sure to remove the relevant use cases from the current plan?",
     "are you sure you want to delete this item?": "are you sure you want to delete this item?",
     "artifact deployment environment": "artifact deployment environment",
+    "artifact type": "artifact type",
     "artifact version": "artifact version",
     "assertion": "assertion",
     "assertion detail": "assertion detail",
@@ -1067,6 +1068,7 @@
     "changed": "changed",
     "changed file(s)": "changed file(s)",
     "changed files": "changed files",
+    "check failed reason": "check failed reason",
     "checkrun-failure-tip": "the code review in MR failed. Please check the pipeline for details",
     "checkrun-process-tip": "the code review in MR is in progress, please check the pipeline for details",
     "checkrun-success-tip": "the code review in MR has been successful. please check the pipeline for details",
