--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -991,6 +991,7 @@
     "are you sure to remove the relevant use cases from the current plan?": "是否确认从当前计划中移除相关用例?",
     "are you sure you want to delete this item?": "确认删除该项？",
     "artifact deployment environment": "制品部署环境",
+    "artifact type": "制品类型",
     "artifact version": "制品版本",
     "assertion": "断言",
     "assertion detail": "断言详情",
@@ -1067,6 +1068,7 @@
     "changed": "已变更",
     "changed file(s)": "个文件修改",
     "changed files": "变更",
+    "check failed reason": "查看失败原因",
     "checkrun-failure-tip": "本次 MR 中代码审查失败，详情请查看流水线",
     "checkrun-process-tip": "本次 MR 中代码审查进行中，详情请查看流水线",
     "checkrun-success-tip": "本次 MR 中代码审查成功，详情请查看流水线",
