feat: merge my projects and public projects to one page

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -967,11 +967,9 @@
     "appMonitor": "appMonitor",
     "application / service / instance name": "application / service / instance name",
     "application branch rule": "application branch rule",
-    "config information": "config information",
     "application description": "application description",
     "application information": "application information",
     "application name": "application name",
-    "application parameters": "application parameters",
     "application pipeline": "application pipeline",
     "application setting": "settings",
     "application type": "application type",
@@ -1122,6 +1120,7 @@
     "complexity": "complexity",
     "condition to end loop": "condition to end loop",
     "config data": "config data",
+    "config information": "config information",
     "configCenter": "configCenter",
     "configuration": "configuration",
     "configure-deployment-environment": "Configure your deployment environment to manage environment variables for a specific environment",
@@ -1262,7 +1261,6 @@
     "environment variables cannot be empty": "environment variables cannot be empty",
     "environmental domain name": "environmental domain name",
     "environments": "environments",
-    "environments config": "environments config",
     "equal to": "equal to",
     "equal to, not equal to": "Equal, Not equal",
     "example": "example",
@@ -1564,7 +1562,6 @@
     "pinned successfully": "pinned successfully",
     "pipeline ID": "pipeline ID",
     "pipeline configuration": "pipeline configuration",
-    "pipeline list": "pipeline list",
     "pipeline-run-tip": "The current configuration is historical, please switch to the latest configuration before operating",
     "plan": "plan",
     "plan ID": "plan ID",
@@ -1662,6 +1659,7 @@
     "project updated successfully": "project updated successfully",
     "project-img-copyright-tip": "* image by Scott Webb on Pexels",
     "project-level-app-form-tip": "after setting as a project-level application, the pipeline of the application can directly call the pipelines of other applications of the project",
+    "projects": "projects",
     "protect branch, not editable": "protect branch, not editable",
     "protected branch": "protected branch",
     "protected-branch-form-tip": "after branch protection is turned on, only the application owner and application leader can operate, and other members can only submit code through mr",
@@ -1734,7 +1732,6 @@
     "search by application name": "search by application name",
     "search by chinese/english name of attribute": "search by chinese/english name of attribute",
     "search by id or title": "search by id or title",
-    "search by owned project": "search by owned project",
     "search by person or product information": "search by person or product information",
     "search for": "search for",
     "search label under project": "search label under project",
@@ -1884,7 +1881,6 @@
     "ticket description": "ticket description",
     "ticket title": "ticket title",
     "ticket type": "ticket type",
-    "tickets": "tickets",
     "time consuming": "time consuming",
     "time cost": "time cost",
     "time period": "time period",
@@ -2544,7 +2540,6 @@
     "successful QPS": "successful QPS",
     "successful call amount": "successful call amount",
     "sum-weights": "the sum of the selected weights must be equal to 100% and the current weight is",
-    "summary": "summary",
     "supplier list": "supplier list",
     "switch app": "switch app",
     "switch application": "switch application",
