--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -967,11 +967,9 @@
     "appMonitor": "应用监控",
     "application / service / instance name": "应用 / 服务 / 实例名",
     "application branch rule": "应用分支规则",
-    "config information": "配置信息",
     "application description": "应用描述",
     "application information": "应用信息",
     "application name": "应用名称",
-    "application parameters": "应用参数",
     "application pipeline": "应用流水线",
     "application setting": "应用设置",
     "application type": "应用类型",
@@ -1122,6 +1120,7 @@
     "complexity": "复杂度",
     "condition to end loop": "循环结束条件",
     "config data": "配置单",
+    "config information": "配置信息",
     "configCenter": "配置中心",
     "configuration": "配置",
     "configure-deployment-environment": "不同环境中差异化部署配置内容可在此维护",
@@ -1262,7 +1261,6 @@
     "environment variables cannot be empty": "环境变量不能为空",
     "environmental domain name": "环境域名",
     "environments": "环境",
-    "environments config": "环境配置",
     "equal to": "等于",
     "equal to, not equal to": "等于、不等于",
     "example": "示例",
@@ -1564,7 +1562,6 @@
     "pinned successfully": "置顶成功",
     "pipeline ID": "流水线ID",
     "pipeline configuration": "流水线配置",
-    "pipeline list": "流水线列表",
     "pipeline-run-tip": "当前为历史配置，请切换最新配置后再操作",
     "plan": "版本",
     "plan ID": "计划 ID",
@@ -1662,6 +1659,7 @@
     "project updated successfully": "更新项目成功",
     "project-img-copyright-tip": "* Pexels 上的 Scott Webb 拍摄的图片",
     "project-level-app-form-tip": "设置为项目级应用后，该应用的流水线中直接可以调用项目其他应用的流水线",
+    "projects": "项目",
     "protect branch, not editable": "保护分支, 不可编辑",
     "protected branch": "分支保护",
     "protected-branch-form-tip": "分支保护开启后，只有应用所有者、应用研发主管才能操作，其他成员只能通过mr提交代码",
@@ -1734,7 +1732,6 @@
     "search by application name": "按应用名称搜索",
     "search by chinese/english name of attribute": "输入属性的中文/英文名搜索",
     "search by id or title": "按id或标题搜索",
-    "search by owned project": "通过所在项目搜索",
     "search by person or product information": "搜索人名或制品名",
     "search for": "搜索",
     "search label under project": "搜索项目下的标签",
@@ -1884,7 +1881,6 @@
     "ticket description": "工单描述",
     "ticket title": "工单标题",
     "ticket type": "工单类型",
-    "tickets": "工单反馈",
     "time consuming": "耗时",
     "time cost": "用时",
     "time period": "时间段",
@@ -2544,7 +2540,6 @@
     "successful QPS": "成功QPS",
     "successful call amount": "成功调用量",
     "sum-weights": "所选权重之和必须等于 100%，当前权重为",
-    "summary": "摘要",
     "supplier list": "供应者列表",
     "switch app": "应用切换",
     "switch application": "切换应用",
