--- a/locales/en.json
+++ b/locales/en.json
@@ -115,7 +115,6 @@
     "Please enter the number of {min}-{max} decimal": "Please enter the number of {min}-{max} decimal",
     "Please enter version number, such as x.y.z.": "please enter version number, such as x.y.z",
     "Project": "Project",
-    "Public": "Public",
     "Qingdao": "Qingdao",
     "Quality": "Quality",
     "Release": "Release",
@@ -548,7 +547,6 @@
     "join {orgName}": "join {orgName}",
     "joined apps": "joined apps",
     "joined organization successfully": "joined organization successfully",
-    "joined projects": "joined projects",
     "jump server": "jump server",
     "key": "key",
     "key only can be letters": "key only can be letters",
@@ -1001,6 +999,7 @@
     "{label} can not be empty": "{label} can not be empty",
     "{min} ~ {max} digits": "{min} ~ {max} digits",
     "{name} already exists": "{name} already exists",
+    "{name} already exists in {place}": "{name} already exists in {place}",
     "{name} can not empty": "{name} can not empty",
     "{name} format": "{name} format",
     "{name} identifier": "{name} identifier",
