--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -395,6 +395,7 @@
     "message content rules": "消息内容规则",
     "message template": "消息模板定义",
     "message title rules": "消息标题规则",
+    "message title rules template": "【{{application_name}}应用{{service_name}}服务异常告警】",
     "microservice governance desc": "提供一站式的微服务系统观测，包括服务监控、链路追踪、仪表盘和告警等功能",
     "middleware": "中间件",
     "middleware container chart": "中间件容器图表",
