--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1897,6 +1897,7 @@
     "to configure": "进行配置",
     "total": "总量",
     "total number of interfaces": "接口总数",
+    "total number of pipelines": "流水线总数",
     "total number of use cases": "用例总数",
     "traffic load": "流量负载",
     "transfer-custom-addon": "可在其他项目中导入如下配置，来创建相同的自定义服务",
