--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -811,7 +811,7 @@
     "Addon": "Addon",
     "After the use case is selected, the batch operation can be performed.": "After the use case is selected, the batch operation can be performed.",
     "An Action with the same name exists.": "An Action with the same name exists.",
-    "Applications release list top desc": "Application artifacts rely on release Action generation in the pipeline pipeline. If a tag version matching the version number semantics is filled in the Release Action, this tag version is used as the product version name. Or build artifacts based on the Release /* branch, and the base part of the branch name conforms to the version number semantics, use the base part of the branch name to generate the artifact version name, such as release/1.1.3 build artifacts with version name 1.1.3+20220101150405.",
+    "Applications release list top desc": "Application artifacts rely on release Action generation in the pipeline pipeline. When a tag version matching [version number semantics] is filled in the Release Action, that tag version is used as the product version name; Or build artifacts based on the Release /* branch, and the base part of the branch name [version number semantics], use the base part of the branch name to generate the version name of the artifact, such as release/1.1.3 build artifacts with version name 1.1.3+20220101150405.",
     "Are you sure to delete in batches?": "Are you sure to delete in batch?",
     "Are you sure to disinclude {name}": "Are you sure to disinclude {name}",
     "Are you sure to leave, with the error message not saved?": "Are you sure to leave, with the error message not saved?",
