feat(dop): project pipeline apps list add pipelines total num (#2728)
* feat(dop): project pipeline apps list add pipelines total num

* fix: code optimization

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1898,6 +1898,7 @@
     "to configure": "to configure",
     "total": "total",
     "total number of interfaces": "total number of interfaces",
+    "total number of pipelines": "total number of pipelines",
     "total number of use cases": "total number of use cases",
     "traffic load": "traffic load",
     "transfer-custom-addon": "The following configuration can be imported into other projects to create a custom server",
