--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -991,6 +991,8 @@
     "are you sure to delete the currently selected use case?": "are you sure to delete the currently selected use case?",
     "are you sure to remove the relevant use cases from the current plan?": "are you sure to remove the relevant use cases from the current plan?",
     "are you sure you want to delete this item?": "are you sure you want to delete this item?",
+    "artifact creator": "artifact creator",
+    "artifact created at": "artifact created at",
     "artifact deployment environment": "artifact deployment environment",
     "artifact type": "artifact type",
     "artifact version": "artifact version",
@@ -1736,7 +1738,7 @@
     "search by chinese/english name of attribute": "search by chinese/english name of attribute",
     "search by id or title": "search by id or title",
     "search by owned project": "search by owned project",
-    "search by person or product information": "search by person or product information",
+    "search by ID, person or product information": "search by ID, person or product information",
     "search for": "search for",
     "search label under project": "search label under project",
     "searchCenter": "searchCenter",
