--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -991,6 +991,8 @@
     "are you sure to delete the currently selected use case?": "是否确认删除当前选中用例?",
     "are you sure to remove the relevant use cases from the current plan?": "是否确认从当前计划中移除相关用例?",
     "are you sure you want to delete this item?": "确认删除该项？",
+    "artifact creator": "制品创建人",
+    "artifact created at": "制品创建时间",
     "artifact deployment environment": "制品部署环境",
     "artifact type": "制品类型",
     "artifact version": "制品版本",
@@ -1736,7 +1738,7 @@
     "search by chinese/english name of attribute": "输入属性的中文/英文名搜索",
     "search by id or title": "按id或标题搜索",
     "search by owned project": "通过所在项目搜索",
-    "search by person or product information": "搜索人名或制品名",
+    "search by ID, person or product information": "搜索ID、人名或制品名",
     "search for": "搜索",
     "search label under project": "搜索项目下的标签",
     "searchCenter": "搜索中心",
