--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1417,6 +1417,7 @@
     "local execution results of dev ut": "local execution results of dev ut",
     "lock-operation-tip": "the repository is locked and this operation cannot be performed",
     "logAnalysis": "logAnalysis",
+    "logService": "logService",
     "logged": "logged",
     "loop strategy": "loop strategy",
     "low": "low",
