fix(dop): project release detail optimization

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -945,6 +945,7 @@
     "addon category": "addons",
     "addon info": "addon info",
     "addon setting": "addon setting",
+    "address": "address",
     "all": "all",
     "all issues": "all issues",
     "all iterations": "all iterations",
