--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -945,6 +945,7 @@
     "addon category": "服务目录",
     "addon info": "服务信息",
     "addon setting": "服务设置",
+    "address": "地址",
     "all": "全部",
     "all issues": "全部事项",
     "all iterations": "所有迭代",
