feat(msp): unify MSP menu and breadcrumbs

--- a/locales/en.json
+++ b/locales/en.json
@@ -13,6 +13,7 @@
     "API strategy": "API strategy",
     "API test": "API test",
     "API version": "API version",
+    "APIGateway": "APIGateway",
     "Alarm": "Alarm",
     "Alibaba Cloud": "Alibaba Cloud",
     "All members of the organization can view": "all members of the current company can view",
@@ -78,6 +79,7 @@
     "July": "July",
     "June": "June",
     "Kuala lumpur": "Kuala lumpur",
+    "LogAnalyze": "LogAnalyze",
     "London": "London",
     "Malaysia": "Malaysia",
     "March": "March",
@@ -451,6 +453,7 @@
     "email": "email",
     "enable": "enable",
     "enabled successfully": "enabled successfully",
+    "enter details": "enter details",
     "enter key to save quickly": "enter key to save quickly",
     "entry domain": "entry domain",
     "entry mode": "entry mode",
@@ -1000,6 +1003,7 @@
     "{label} can not be empty": "{label} can not be empty",
     "{min} ~ {max} digits": "{min} ~ {max} digits",
     "{name} already exists": "{name} already exists",
+    "{name} already exists in {place}": "{name} already exists in {place}",
     "{name} can not empty": "{name} can not empty",
     "{name} format": "{name} format",
     "{name} identifier": "{name} identifier",
