--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -410,7 +410,7 @@
     "new O & M dashboard": "new O & M dashboard",
     "new alarm strategy": "new alarm strategy",
     "new cluster deployment": "new cluster deployment",
-    "new dashboard": "new dashboard",
+    "new custom dashboard": "new custom dashboard",
     "new report task": "new report task",
     "new strategy": "new strategy",
     "no cluster available": "no cluster available",
@@ -862,7 +862,6 @@
     "Platform default rules. Please add custom rules if necessary.": "platform default rules, if you need to adjust by adding custom rules",
     "Please enter the issue title": "Please enter the issue title",
     "Please enter the repository address started with http or https.": "Please enter the repository address started with http or https.",
-    "Please execute pipeline first": "Please execute pipeline first",
     "Please fill in the json expression of obtained target key to determine if the key exists.": "Please fill in the json expression of obtained target key to determine if the key exists.",
     "Project homepage": "Project homepage",
     "Projects": "Projects",
@@ -1176,7 +1175,6 @@
     "custom fields": "custom fields",
     "custom filter": "custom filter",
     "cut": "cut",
-    "dashboard": "dashboard",
     "data bank": "data bank",
     "data market": "data market",
     "data model": "data model",
@@ -1990,12 +1988,18 @@
     "API policies": "API policies",
     "API prefix": "API prefix",
     "API source": "API source",
+    "AccessConfig": "AccessConfig",
+    "ActiveMonitor": "ActiveMonitor",
+    "AlarmHistory": "AlarmHistory",
+    "AlertStrategy": "AlertStrategy",
     "Cache call": "Cache call",
     "Choose different indicators and user features for comparative analysis for different business types and scenarios, to locate issues accurately.": "different business types and business scenarios select different indicators and user characteristics for comparative analysis, and precise positioning problems",
+    "ComponentInfo": "ComponentInfo",
     "DNS parsing times": "DNS parsing times",
     "Database call": "Database call",
     "DevOps Project": "DevOps Project",
     "Erda service": "Erda service",
+    "ErrorInsight": "ErrorInsight",
     "Failed to cancel. Please try again late.": "Failed to cancel. Please try again late.",
     "Flame Graph": "Flame Graph",
     "HTTP call": "HTTP call",
@@ -2004,8 +2008,10 @@
     "If you delete a user, all authorized APIs for that user will be deleted.": "if you delete a user, all of the user's authorized API will be deleted!",
     "JavaScript error times": "JavaScript error times",
     "MQ call": "MQ call",
+    "MemberManagement": "MemberManagement",
     "No abnormal transaction data sampled yet.": "No abnormal transaction data sampled yet.",
     "No slow transaction data sampled yet.": "No slow transaction data sampled yet.",
+    "NotifyGroupManagement": "NotifyGroupManagement",
     "OpenAPI for partners": "OpenAPI for partners",
     "Please enter API to search.": "Please enter API to search.",
     "Please enter a name consisting of letters and numbers within 20 characters.": "Please enter a name consisting of letters and numbers within 20 characters.",
@@ -2015,6 +2021,8 @@
     "Provides one-stop service system observation, including service monitoring, tracing, dashboard, and alarm.": "Provides one-stop service system observation, including service monitoring, tracing, dashboard, and alarm.",
     "RPC call": "RPC call",
     "RPC transaction": "RPC transaction",
+    "RegisterCenter": "RegisterCenter",
+    "RuleManagement": "RuleManagement",
     "The selected interface weight will be set to": "The selected interface weight will be set to",
     "URL path": "URL path",
     "URL path prefix": "URL path prefix",
@@ -2022,7 +2030,6 @@
     "Web transaction": "Web transaction",
     "a domain name can only contain numbers, lowercase letters, *, -": "a domain name can only contain numbers, lowercase letters, *, -",
     "abnormal traffic interception": "abnormal traffic interception",
-    "access configuration": "access configuration",
     "access domain": "access domain",
     "access domain performance trends": "access domain performance trends",
     "access error": "access error",
@@ -2032,7 +2039,6 @@
     "access service": "access service",
     "activated": "activated",
     "active connections": "active connections",
-    "active monitoring": "active monitoring",
     "add analysis rule": "add analysis rule",
     "add monitoring": "add monitoring",
     "add to query": "add to query",
@@ -2040,7 +2046,6 @@
     "address": "address",
     "ajax interface": "ajax interface",
     "ajax performance trends": "ajax performance trends",
-    "alarm history": "alarm history",
     "all": "all",
     "all methods": "all methods",
     "all service": "all service",
@@ -2067,7 +2072,6 @@
     "associated services": "associated services",
     "attributes": "attributes",
     "audit": "audit",
-    "authentication management": "authentication management",
     "authentication mode": "authentication mode",
     "authentication passed": "authentication passed",
     "authentication passed and authorized": "authentication passed and authorized",
@@ -2141,7 +2145,6 @@
     "comparative analysis": "comparative analysis",
     "comparative analysis of user features": "comparative analysis of user features",
     "complete": "complete",
-    "component info": "component info",
     "configuration": "configuration",
     "confirm authorization": "confirm authorization",
     "confirm deletion": "confirm deletion",
@@ -2175,6 +2178,7 @@
     "current service": "current service",
     "current span time": "current span time",
     "currently no request": "currently no request",
+    "custom Dashboard": "custom Dashboard",
     "custom address": "custom address",
     "custom domain name": "custom domain name",
     "custom nginx configuration": "custom nginx configuration",
@@ -2282,7 +2286,7 @@
     "forwarding path": "forwarding path",
     "forwarding type": "forwarding type",
     "free service": "free service",
-    "front-end monitor": "front-end monitor",
+    "frontMonitor": "frontMonitor",
     "full text query": "full text query",
     "gateway load": "gateway load",
     "geography": "geography",
@@ -2381,7 +2385,6 @@
     "not equal": "not equal",
     "not match": "not match",
     "not satisfied": "not satisfied",
-    "notification group management": "notification group management",
     "number of connection": "number of connection",
     "number of errors": "number of errors",
     "number of failed calls": "number of failed calls",
@@ -2478,7 +2481,6 @@
     "response traffic": "response traffic",
     "root cause analysis": "root cause analysis",
     "router": "router",
-    "rule management": "rule management",
     "running instance": "running instance",
     "runtime monitor": "runtime monitor",
     "satisfied": "satisfied",
@@ -2510,10 +2512,9 @@
     "service invocation analysis": "service invocation analysis",
     "service list": "service list",
     "service load protection": "service load protection",
-    "service monitor": "service monitor",
+    "service monitor": "ServiceMonitor",
     "service name": "service name",
     "service overview": "Overview",
-    "service registration list": "service registration list",
     "service request overview": "service request overview",
     "service routing prefix": "service routing prefix",
     "service topology": "service topology",
