--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -410,7 +410,7 @@
     "new O & M dashboard": "新建运维大盘",
     "new alarm strategy": "新建告警策略",
     "new cluster deployment": "新增集群部署",
-    "new dashboard": "新建仪表盘",
+    "new custom dashboard": "新建自定义大盘",
     "new report task": "新建报告任务",
     "new strategy": "新建策略",
     "no cluster available": "无可用集群",
@@ -862,7 +862,6 @@
     "Platform default rules. Please add custom rules if necessary.": "平台默认规则，如需要调整请通过添加自定义规则来完成",
     "Please enter the issue title": "请输入事项标题",
     "Please enter the repository address started with http or https.": "请输入以http或https开头的仓库地址",
-    "Please execute pipeline first": "请先执行流水线",
     "Please fill in the json expression of obtained target key to determine if the key exists.": "值请填获取目标key的json表达式，以判断该key是否存在。",
     "Project homepage": "主页",
     "Projects": "项目管理",
@@ -1176,7 +1175,6 @@
     "custom fields": "自定义字段",
     "custom filter": "自建筛选器",
     "cut": "剪切",
-    "dashboard": "仪表盘",
     "data bank": "数据银行",
     "data market": "数据集市",
     "data model": "数据模型",
@@ -1990,12 +1988,18 @@
     "API policies": "API策略",
     "API prefix": "API前缀",
     "API source": "API 来源",
+    "AccessConfig": "接入配置",
+    "ActiveMonitor": "主动监控",
+    "AlarmHistory": "告警历史",
+    "AlertStrategy": "告警策略",
     "Cache call": "缓存调用",
     "Choose different indicators and user features for comparative analysis for different business types and scenarios, to locate issues accurately.": "不同的业务类型和业务场景选择不同的指标和用户特征进行对比分析，精准定位问题所在",
+    "ComponentInfo": "组件信息",
     "DNS parsing times": "DNS解析次数",
     "Database call": "数据库调用",
     "DevOps Project": "研发项目",
     "Erda service": "Erda服务",
+    "ErrorInsight": "错误分析",
     "Failed to cancel. Please try again late.": "取消失败，请稍后重试",
     "Flame Graph": "火焰图",
     "HTTP call": "HTTP 调用",
@@ -2004,8 +2008,10 @@
     "If you delete a user, all authorized APIs for that user will be deleted.": "如果删除用户，该用户的所有已授权API都会删除！",
     "JavaScript error times": "JavaScript报错次数",
     "MQ call": "MQ 调用",
+    "MemberManagement": "成员管理",
     "No abnormal transaction data sampled yet.": "暂无被采样的异常事务数据",
     "No slow transaction data sampled yet.": "暂无被采样的慢事务数据",
+    "NotifyGroupManagement": "通知组管理",
     "OpenAPI for partners": "面向合作伙伴开放API",
     "Please enter API to search.": "请输入 API 查找",
     "Please enter a name consisting of letters and numbers within 20 characters.": "请输入20个字符内字母数字组成的名称",
@@ -2015,6 +2021,8 @@
     "Provides one-stop service system observation, including service monitoring, tracing, dashboard, and alarm.": "提供一站式的服务系统观测，包括服务监控、链路追踪、仪表盘和告警等功能。",
     "RPC call": "RPC 调用",
     "RPC transaction": "RPC事务",
+    "RegisterCenter": "注册中心",
+    "RuleManagement": "规则管理",
     "The selected interface weight will be set to": "所选接口权重将置为",
     "URL path": "URL 路径",
     "URL path prefix": "URL 路径前缀",
@@ -2022,7 +2030,6 @@
     "Web transaction": "Web事务",
     "a domain name can only contain numbers, lowercase letters, *, -": "域名只能包含数字、小写字母、*、-",
     "abnormal traffic interception": "异常流量拦截",
-    "access configuration": "接入配置",
     "access domain": "访问域名",
     "access domain performance trends": "访问域名性能趋势",
     "access error": "访问错误",
@@ -2032,7 +2039,6 @@
     "access service": "接入服务",
     "activated": "已启用",
     "active connections": "活跃连接数",
-    "active monitoring": "主动监控",
     "add analysis rule": "添加分析规则",
     "add monitoring": "添加监控",
     "add to query": "添加到查询",
@@ -2040,7 +2046,6 @@
     "address": "地址",
     "ajax interface": "Ajax接口",
     "ajax performance trends": "Ajax性能趋势",
-    "alarm history": "告警历史",
     "all": "全部",
     "all methods": "全部方法",
     "all service": "全部服务",
@@ -2067,7 +2072,6 @@
     "associated services": "关联服务",
     "attributes": "属性",
     "audit": "审计",
-    "authentication management": "鉴权管理",
     "authentication mode": "鉴权模式",
     "authentication passed": "认证通过",
     "authentication passed and authorized": "认证通过+授权许可",
@@ -2141,7 +2145,6 @@
     "comparative analysis": "对比分析",
     "comparative analysis of user features": "用户特征对比分析",
     "complete": "完成",
-    "component info": "组件信息",
     "configuration": "配置",
     "confirm authorization": "确认授权",
     "confirm deletion": "确认删除",
@@ -2175,6 +2178,7 @@
     "current service": "当前服务",
     "current span time": "当前 span 时间",
     "currently no request": "当前无请求",
+    "custom Dashboard": "自定义大盘",
     "custom address": "自定义地址",
     "custom domain name": "自定义域名",
     "custom nginx configuration": "自定义nginx配置",
@@ -2282,7 +2286,7 @@
     "forwarding path": "转发路径",
     "forwarding type": "转发方式",
     "free service": "离群服务",
-    "front-end monitor": "前端监控",
+    "frontMonitor": "前端监控",
     "full text query": "全文查询",
     "gateway load": "网关负载",
     "geography": "地理",
@@ -2381,7 +2385,6 @@
     "not equal": "不等于",
     "not match": "不匹配",
     "not satisfied": "不满意",
-    "notification group management": "通知组管理",
     "number of connection": "连接数",
     "number of errors": "错误次数",
     "number of failed calls": "调用失败次数",
@@ -2478,7 +2481,6 @@
     "response traffic": "应答流量",
     "root cause analysis": "根因分析",
     "router": "路由",
-    "rule management": "规则管理",
     "running instance": "运行中的实例",
     "runtime monitor": "运行时监控",
     "satisfied": "满意",
@@ -2513,7 +2515,6 @@
     "service monitor": "服务监控",
     "service name": "服务名",
     "service overview": "服务总览",
-    "service registration list": "服务注册列表",
     "service request overview": "服务请求概览",
     "service routing prefix": "服务路由前缀",
     "service topology": "服务拓扑",
