--- a/locales/zh.json
+++ b/locales/zh.json
@@ -13,6 +13,7 @@
     "API strategy": "API 策略",
     "API test": "API 测试",
     "API version": "API 版本",
+    "APIGateway": "API 网关",
     "Alarm": "告警",
     "Alibaba Cloud": "阿里云",
     "All members of the organization can view": "当前组织下所有成员都可以查看",
@@ -78,6 +79,7 @@
     "July": "7月",
     "June": "6月",
     "Kuala lumpur": "吉隆坡",
+    "LogAnalyze": "日志分析",
     "London": "伦敦",
     "Malaysia": "马来西亚",
     "March": "3月",
@@ -451,6 +453,7 @@
     "email": "邮箱",
     "enable": "启用",
     "enabled successfully": "启用成功",
+    "enter details": "进入详情",
     "enter key to save quickly": "回车键快速保存",
     "entry domain": "入口域名",
     "entry mode": "录入模式",
